2006-12-21  Jan Schmidt  <thaytan@mad.scientist.com>

	* bin/new-release:
	  Quote some variables.

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.4.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.5.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	Release Good 0.10.5 and Bad 0.10.4

2006-12-19  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	* src/htdocs/download/fedora5.xml:
	  Make the difference between the two fedora pages more clear.

2006-12-14  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	Update the entities. Fix the version number in the ffmpeg release
	notes link

2006-12-13  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.10.2.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.5.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	Release 0.10.2 of gst-ffmpeg and 0.10.5 of gst-plugins-ugly

2006-12-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	Remove empty person from the persons list
	* src/htdocs/releases/gstreamer/0.10.11.xml:
	Re-add the API additions section that I'm sure I added once
	already.

2006-12-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	Fix the api additions tags <additions><item></item>, not
	<additions><addition></addition>

2006-12-06  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.11.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.11.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	GStreamer 0.10.11 and gst-plugins-base 0.10.11 releases
