@@ -1,3 +1,12 @@
+2007-01-26  Edward Hervey  <edward@fluendo.com>
+
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gnonlin/0.10.7.xml:
+	* src/htdocs/releases/gnonlin/Makefile.am:
+	* src/htdocs/releases/gnonlin/template.xml:
+	Releasing GNonLin 0.10.7 "Anything better ?"
+
 2006-12-21  Jan Schmidt  <thaytan@mad.scientist.com>
 
 	* bin/new-release:
